<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtClassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:singleLine="true">
            <com.google.android.material.chip.Chip
                android:id="@+id/chipScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chipNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/announcement"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chipFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa_feedback"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chipStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sĩ số"/>
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLeaveClass"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rời lớp"
            android:visibility="gone"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
</ScrollView>
